--- a/src/Components/User/Navigation/Nav.module.scss
+++ b/src/Components/User/Navigation/Nav.module.scss
@@ -184,4 +184,7 @@ $PcHeadingSize: 1.5rem;
       transform: translate(-50%, -50%);
     }
   }
+  .StudentNav{
+   font-size: $PcHeadingSize;
+  }
 }
