--- a/src/Components/User/Navigation/Nav.module.css
+++ b/src/Components/User/Navigation/Nav.module.css
@@ -266,5 +266,8 @@
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
   }
+  .StudentNav {
+    font-size: 1.5rem;
+  }
 }
 /*# sourceMappingURL=Nav.module.css.map */
