--- a/src/Components/User/editStudent/EditStudent.module.scss
+++ b/src/Components/User/editStudent/EditStudent.module.scss
@@ -59,6 +59,7 @@ $PcHeadingSize: 1.5rem;
       color: $Primarycolor;
       font-weight: 600;
       margin-bottom: 1em;
+      display: none;
   }
   .MainHead{
       margin-top: 1em;
