--- a/src/Components/User/Footer/Footer.module.css
+++ b/src/Components/User/Footer/Footer.module.css
@@ -2,6 +2,10 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -13,6 +17,11 @@
   opacity: 0.8;
   font-size: 0.8rem;
   padding-bottom: .2em;
+}
+
+.Footer .Background .iedcLogo {
+  width: 25px;
+  height: 50px;
 }
 
 @media only screen and (min-width: 960px) {
