--- a/src/Components/User/Footer/Footer.module.scss
+++ b/src/Components/User/Footer/Footer.module.scss
@@ -2,6 +2,7 @@ $SeconderyColor: #2d4059;
 $UltraSmallText: .8rem;
 .Footer{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     font-weight: 400;
@@ -9,7 +10,14 @@ $UltraSmallText: .8rem;
     opacity: 0.8;
     font-size: $UltraSmallText;
     padding-bottom: .2em;
+    .Background{
+        .iedcLogo{
+            width: 25px;
+            height: 50px;
+        }
+    }
 }
+
 @media only screen and (min-width: 960px){
     .Footer{
        position: absolute;
